--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 dependencies {
     compile(
             "io.netty:netty-all:4.1.15.Final",
+            'com.google.protobuf:protobuf-java:3.10.0',
+            'com.google.protobuf:protobuf-java-util:3.10.0'
     )
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
