--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ dependencies {
     compile(
             "io.netty:netty-all:4.1.15.Final",
             'com.google.protobuf:protobuf-java:3.10.0',
-            'com.google.protobuf:protobuf-java-util:3.10.0'
+            'com.google.protobuf:protobuf-java-util:3.10.0',
+            'org.apache.thrift:libthrift:0.12.0'
     )
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
