--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
-plugins {
-    id 'java'
-}
+
+apply plugin: 'java'
+apply plugin: 'com.google.protobuf'
 
 group 'com.shengsiyuan'
 version '1.0'
@@ -17,7 +17,34 @@ dependencies {
             "io.netty:netty-all:4.1.15.Final",
             'com.google.protobuf:protobuf-java:3.10.0',
             'com.google.protobuf:protobuf-java-util:3.10.0',
-            'org.apache.thrift:libthrift:0.12.0'
+            'org.apache.thrift:libthrift:0.12.0',
+            'io.grpc:grpc-netty-shaded:1.25.0',
+            'io.grpc:grpc-protobuf:1.25.0',
+            'io.grpc:grpc-stub:1.25.0'
     )
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.10'
+    }
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.10.0"
+    }
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.25.0'
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+        }
+    }
 }
