--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ dependencies {
             'org.apache.thrift:libthrift:0.12.0',
             'io.grpc:grpc-netty-shaded:1.25.0',
             'io.grpc:grpc-protobuf:1.25.0',
-            'io.grpc:grpc-stub:1.25.0'
+            'io.grpc:grpc-stub:1.25.0',
+            'javax.annotation:javax.annotation-api:1.3.2'
     )
 }
 
